<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">503327623063069</string>
    <string name="app_name">Biblia</string>
    
    <string name="flurryKey">XQ56KHHBGB62HBV4C3BG</string>    
    
    <string name="placeholder">Hely tartó</string>
    <string name="dialogImageContent">Ez itt egy kép</string>
    <string name="action_settings">Beállítások</string>
    <string name="unknownTitle">Ismeretlen</string>
    <string name="chapter">Fejezet</string>
    <string name="versesLabel">vers</string>
    <string name="facebookShareButton">Megosztás Facebookon</string>
    <string name="addBookmarkButton">Könyvjelző hozzáadása</string>
    <string name="highlightButton">Kijelölés</string>
    <string name="highlightDialogTitle">Címke hozzáadása</string>
    
    <string name="facebookPostSend">Megosztom</string>
    <string name="facebookPostCancel">Mégsem</string>
    <string name="facebookShareDialogTitle">Hallja mindenki!</string>
    <string name="facebookLoginError">Sikertelen belépés</string>
    <string name="saveBookmark">Könyvjelző hozzáadása</string>
    <string name="noteLabel">Megjegyzés</string>
    <string name="bookmarksTitle">Könyvjelzők</string>
    <string name="toBookList">Könyvek listája</string>
    <string name="toLocationList">Helyek</string>
    <string name="continueWhereFinished">Legutóbb olvasott ige</string>
    
    <string name="facebookDialogTitle">Facebook bejelentkezés</string>
    <string name="facebookDialogMessage">A közösségi szolgáltatások használatához be kell jelentkezni. Szeretne belépni Facebook profiljával?</string>
    <string name="facebookDialogLogin">Belépek</string>
    <string name="facebookDialogLater">Most nem</string>
    <string name="facebookDialogNever">Sose</string>

    <string name="ratingDialogTitle">Tetszik az alkalmazás?</string>
    <string name="ratingDialogMessage">Ha tetszik az alkalmazás, kérlek értékeld a Google Play Store-ban. Ha lehetne jobb is, küldj egy mail-t, hogy mi hiányzik belőle, mitől tudnád jobban használni. Előre is köszönöm!</string>
    <string name="ratingDialogRate">Tetszett, értékelem</string>
    <string name="ratingDialogEmail">Javaslatot küldök</string>
    <string name="ratingDialogLater">Majd később</string>
    <string name="sendSuggestions">Javaslat küldése</string>
    <string name="rateEmailSubject">Javaslat a Károli Biblia javításához</string>
    
    <string name="flurryDialogTitle">Loggolás engedélyezése</string>
    <string name="flurryDialogMessage">Rengeteg féle eszközt használtok, és én csak 1-2 telefonon tudok tesztelni, ezért ahogy az alkalmazás egyre komplexebb lesz, becsúsznak hibák, ezeknek felderítéséhez és javításához és az alkalmazás használatotok megismeréséhez szeretnék kizárólag az alkalmazáshoz kötődő adatokat gyűjteni.
        Az alkalmazás nem fogja loggolni hogy melyik versekhez milyen könyvjelzőket, megjegyzéseket fűztök, mit olvastok vagy címkéztek, kizárólag a könyvjelzők és a címkék számát, természetesen név nélkül. Az adatokat csak én fogom megnézni.</string>
    <string name="flurryDialogEnable">Segítek</string>
    <string name="flurryDialogDisable">Nem segítek</string>
    
    <string name="settings">Belállítások</string>
    <string name="textSize">Betűméret</string>
    <string name="settingsSmallerFont">Kisebb</string>
    <string name="settingsActualFont">Aktuális</string>
    <string name="settingsLargerFonts">Nagyobb</string>

    <string name="tagsTitle">Címkék</string>
    <string name="tagListItemWithCount">%1$s (%2$d vers)</string>
    <string name="highlightSaveButton">Mentés</string>
    <string name="verseByTag">Versek témakörök szerint (%1$d vers)</string>
    <string name="tagCountSuffix">(%1$d vers)</string>

        <string name="errorCouldntCreateBookmark">A könyvjelző hozzáadása sikertelen volt.</string>
    
    <string name="flurryEventAppStarted">App started</string>
    <string name="flurryEventChapterOpenedCount">Chapters opened</string>
    <string name="flurryEventBooksListed">Books listed</string>
    <string name="flurryEventContinuedFromLastTime">Continued reading from last time</string>
    <string name="flurryEventBookmarkAdded">Bookmark added</string>
    <string name="flurryEventBookmarkEdited">Bookmark edited</string>
    <string name="flurryEventBookmarkDeleted">Bookmark deleted</string>
    <string name="flurryEventBookmarksOpened">Bookmarks opened</string>
    <string name="flurryParamEventSource">Event source</string>
    <string name="flurryParamBookmarkCount">Bookmark count</string>
    
    <string name="flurryEventBookmarkOpened">Verse opened from bookmark</string>
    
    <string name="flurryEventTagsOpened">Tags opened</string>
    <string name="flurryParamTagCount">Tag count</string>
    
    <string name="flurryEventTagOpened">Tag opened</string>
    <string name="flurryParamTagId">Tag id</string>
    
    <string name="flurryEventTagAdded">Tag added</string>
    
    <string name="flurryEventVerseOpenedFromTag">Verse opened from tag</string>
    
    <string name="initializingDataBase">Az adatbázis inicializálása a háttérben. Ez akár 10 percig is eltarthat.</string>
    
    <string name="atLastChapter">Elértél a Biblia végére.</string>
    <string name="atFirstChapter">A Biblia legelején vagy.</string>
    <string name="deleteBookmark">Törlés</string>
    <string name="modifyBookmark">Mentés</string>
    <string name="modifyBookmarkTtle">Könyvjelző szerkesztése</string>
</resources>