<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ActivityTitle"
        android:text="@string/settings" />

    
    <TextView
        android:id="@+id/textSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subTitle"
        android:text="@string/textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/settingsSmallerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settingsSmallerFont" />

        <TextView
            android:id="@+id/settingsActualText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settingsActualFont" />

        <TextView
            android:id="@+id/settingsLargerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settingsLargerFonts" />

    </LinearLayout>

</LinearLayout>
