<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/paper_1280x720">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0">
	    <TextView
	        android:id="@+id/modifyBookmarkVersView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/unknownTitle"
	        style="@style/listItemText"/>
	        
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/noteLabel"
        style="@style/ListItemTitle" />

    <EditText
        android:id="@+id/modifyBookmarkNoteEditor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|left"
        android:layout_margin="@dimen/activity_small_horizontal_margin"
        android:background="@color/white"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/modifyBookmarkCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebookPostCancel" />

        <Button
            android:id="@+id/modifyBookmarkDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteBookmark" />

        <Button
            android:id="@+id/modifyBookmarkSaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modifyBookmark" />

    </LinearLayout>

</LinearLayout>