<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/paper_1280x720">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0">
	    <TextView
	        android:id="@+id/addBookmarkVersView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/unknownTitle"
	        style="@android:style/TextAppearance.Medium"/>
	        
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/noteLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addBookmarkNoteEditor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|left"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/addBookmarkCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebookPostCancel" />

        <Button
            android:id="@+id/addBookmarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveBookmark" />

    </LinearLayout>

</LinearLayout>