<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:contentDescription="@string/bookmarksTitle"
        android:scaleType="fitXY"
        android:src="@drawable/bookmark_bg" />

    <TextView
        android:id="@+id/bookmarkLink"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/bookmark"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/bookmarksTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/toSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="@dimen/activity_double_horizontal_margin"
        android:layout_marginRight="@dimen/activity_double_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/settings" />

    <Button
        android:id="@+id/lastReadVersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toSettingsButton"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_double_horizontal_margin"
        android:layout_marginRight="@dimen/activity_double_horizontal_margin"
        android:layout_marginBottom="15dp"
        android:text="@string/continueWhereFinished" />

    <Button
        android:id="@+id/toBookListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lastReadVersButton"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_double_horizontal_margin"
        android:layout_marginRight="@dimen/activity_double_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/toBookList" />

</RelativeLayout>