<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/paper_1280x720">

    <EditText
        android:id="@+id/facebookPostEditor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|left"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0">
	    <TextView
	        android:id="@+id/facebookPostVersView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/unknownTitle"
	        style="@android:style/TextAppearance.Medium"/>
	        
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/facebookPostCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebookPostCancel" />

        <Button
            android:id="@+id/facebookPostSendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebookPostSend" />

    </LinearLayout>

</LinearLayout>